# job

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  README.md
.beads/: issues.jsonl
.github/workflows/: release.yml
.tasks/: tk-geap.json  tk-jk7v.json  tk-mq64.json  tk-yy6n.json
ai/: DECISIONS.md  DESIGN.md  SIGTERM_ISSUE.md  STATUS.md
crates/job-cli/: Cargo.toml
crates/job-cli/skills/: skill.md
crates/job-cli/src/: client.rs  main.rs
crates/job-cli/src/commands/: clean.rs  list.rs  logs.rs  retry.rs  run.rs  skills.rs  status.rs  stop.rs  wait.rs
crates/job-core/: Cargo.toml
crates/job-core/src/: db.rs  job.rs  paths.rs  project.rs
crates/job-daemon/src/: server.rs  spawner.rs
skills/: SKILL.md
src/: client.rs  main.rs
src/commands/: clean.rs  completions.rs  daemon.rs  list.rs  logs.rs  mod.rs  retry.rs  run.rs  skills.rs  status.rs  stop.rs  wait.rs
src/core/: db.rs  error.rs  ipc.rs  job.rs  mod.rs  paths.rs  project.rs
src/daemon/: mod.rs  server.rs  spawner.rs  state.rs
