[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.1-alpha1"
edition = "2024"
license = "MIT"
repository = "https://github.com/nijaru/jb"
authors = ["Nick Jaru"]

[workspace.dependencies]
jb-core = { path = "crates/job-core", version = "0.0.1-alpha1" }
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
