[package]
name = "job-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "job"
path = "src/main.rs"

[dependencies]
job-core.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs = "6"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["signal", "process"] }
