[package]
name = "job-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
ulid.workspace = true
chrono.workspace = true
tracing.workspace = true
dirs = "6"
